--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="purple_main">#7777FF</color>
+    <color name="black_body">#000000</color>
+    <color name="gray">#767676</color>
+    <color name="white">#FFFFFF</color>
 </resources>
