--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,6 @@
 <resources>
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
@@ -11,6 +11,42 @@
         <item name="android:textColor">@color/purple_main</item>
         <item name="fontFamily">@font/roboto_medium</item>
         <item name="android:textSize">43sp</item>
+    </style>
+
+    <style name="purple_sub_heading">
+        <item name="android:textColor">@color/purple_main</item>
+        <item name="fontFamily">@font/roboto_medium</item>
+        <item name="android:textSize">24sp</item>
+    </style>
+
+    <style name="black_body_regular">
+        <item name="android:textColor">@color/black_body</item>
+        <item name="fontFamily">@font/roboto_regular</item>
+        <item name="android:textSize">15sp</item>
+    </style>
+
+    <style name="black_sub_heading">
+        <item name="android:textColor">@color/black_body</item>
+        <item name="fontFamily">@font/roboto_medium</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="gray_sub_heading">
+        <item name="android:textColor">@color/gray</item>
+        <item name="fontFamily">@font/roboto_regular</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="gray_body_regular">
+        <item name="android:textColor">@color/gray</item>
+        <item name="fontFamily">@font/roboto_regular</item>
+        <item name="android:textSize">15sp</item>
+    </style>
+
+    <style name="white_sub_heading">
+        <item name="android:textColor">@color/white</item>
+        <item name="fontFamily">@font/roboto_regular</item>
+        <item name="android:textSize">20sp</item>
     </style>
 
 </resources>
